# ffmpeg-transcoding-example

./: .gitignore  CMakeLists.txt  README.md  main.c
inputs/: sample2.aac
